--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background-image: url(../img/entmedia-img/brutv-bg.jpg);
+    background-image: url(../img/media/brutv-bg.jpg);
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -133,7 +133,7 @@
     height: 200px;
 }
 
-@media screen and (min-width: 640px){
+@media screen and (min-width: 640px) {
 
     .custom-video-style {
         margin: 20px;
@@ -148,7 +148,7 @@
         align-items: center;
         margin: auto;
     }
-    
+
     .custom-video-style {
         margin: 20px;
         width: 600px;
@@ -157,7 +157,7 @@
 
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
 
     .custom-content {
         display: flex;
@@ -170,7 +170,7 @@
         color: white;
         z-index: 10;
     }
-    
+
     .custom-header {
         display: flex;
         flex-direction: row;
@@ -178,17 +178,17 @@
         align-items: center;
         margin: auto;
     }
-    
+
     .custom-logo {
         width: 150px;
         height: auto;
     }
-    
+
     .custom-title {
         font-size: 50px;
         font-weight: bold;
     }
-    
+
     .custom-text-content {
         display: flex;
         flex-direction: column;
@@ -200,12 +200,12 @@
         height: auto;
         padding: 10px;
     }
-    
+
     .custom-text-content h1 {
         font-size: 25px;
         font-weight: bold;
     }
-    
+
     .custom-text-content p {
         text-indent: 10px;
         font-size: 20px;
@@ -224,7 +224,7 @@
 
 }
 
-@media screen and (min-width: 1024px){
+@media screen and (min-width: 1024px) {
 
     .custom-caption {
         display: flex;
@@ -234,7 +234,7 @@
         margin-top: 70px;
         margin-left: 20px;
     }
-    
+
     .custom-video-layout {
         display: flex;
         flex-direction: row;
@@ -242,7 +242,7 @@
         align-items: center;
         margin: auto;
     }
-    
+
     .custom-video-style {
         margin: 10px;
         width: 350px;
@@ -262,7 +262,7 @@
         width: 100%;
         height: 100%;
         position: absolute;
-        background-image: url(../img/entmedia-img/brutv-bg.jpg);
+        background-image: url(../img/media/brutv-bg.jpg);
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
