--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -1,3 +1,56 @@
+/* projects.css */
+
+.custom-dropbtn {
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.custom-dropbtn::after{
+    content: "\f160";
+    font-family: "Font Awesome 5 Free";
+    font-weight: bold;
+    margin-left: 5px;
+}
+
+.custom-dropdown {
+    position: relative;
+    display: inline-block;
+    border: 2px solid black;
+    margin: 20px 0 0 20px;
+}
+
+.custom-dropdown:hover{
+    background-color: green;
+    color: white;
+}
+
+.custom-dd-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.custom-dd-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.custom-dropdown a:hover {
+    background-color: #ddd;
+}
+
+.custom-show {
+    display: block;
+}
+
 .filter-list-custom {
     display: flex;
     flex-direction: column;
@@ -8,28 +61,19 @@
 
 .filter-list-custom li {
     padding: 5px;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
     border-bottom: 2px solid transparent;
 }
 
-.filter-list-custom li:hover {
-    color: #018427;
-    transform: scale(1.2);
-    border-bottom: 2px solid #018427;
-}
-
-/* 
 .filter-list-custom li:active {
-    transition: all 0.3s ease-in-out;
-    transform: scale(1);
-} */
+    color: #004f00;
+}
 
 .card-flex-custom {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
 
 .card-custom {
@@ -41,10 +85,6 @@
     transition: all 0.3s ease-in-out;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
 }
-
-/* .card-custom:hover {
-    transform: scale(1.05)
-} */
 
 .card-img-custom {
     overflow: hidden;
@@ -59,26 +99,28 @@
 }
 
 .card-content-custom {
+    position: relative;
     width: 100%;
     height: auto;
     padding: 10px;
 }
 
 .card-content-custom h3 {
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
 }
 
 .card-content-custom p {
     width: 70%;
     padding: 15px 0;
-    font-size: 15px;
+    font-size: 16px;
 }
 
 .btn-custom {
+    position: absolute;
     padding: 5px;
     border: 2px solid black;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
     margin: auto;
     margin-top: auto;
     margin-bottom: 10px;
@@ -87,33 +129,15 @@
     white-space: nowrap;
 }
 
-.btn-custom:hover {
+.btn-custom:active {
+    transform: scale(0.9);
     color: white;
-    border: 2px solid #004f00;
     background-color: #004f00;
+    border: 2px solid #004f00;
 }
 
-/* .btn-custom:active {
-    transform: scale(0.9);
-} */
-
+/* Small Device */
 @media (min-width: 640px) {
-
-
-    .filter-list-custom {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        font-size: 20px;
-        font-weight: bold;
-    }
-
-    .card-flex-custom {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
 
     .card-custom {
         display: flex;
@@ -137,20 +161,7 @@
 
 }
 
-@media (min-width: 768px) {
-
-    .card-custom {
-        display: flex;
-        flex-direction: row;
-        width: 70%;
-        height: 250px;
-        margin: 20px;
-        transition: all 0.3s ease-in-out;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
-    }
-
-}
-
+/* Large Device */
 @media (min-width: 1024px) {
 
     .filter-list-custom {
@@ -161,20 +172,14 @@
         font-weight: bold;
     }
 
-    .filter-list-custom li {
-        padding: 5px;
-        transition: all 0.3s ease-in-out;
-        border-bottom: 2px solid transparent;
-    }
-
     .filter-list-custom li:hover {
         color: #018427;
-        transform: scale(1.2);
+        transform: scale(1.1);
         border-bottom: 2px solid #018427;
     }
 
     .filter-list-custom li:active {
-        transition: all 0.3s ease-in-out;
+        transition: all 0.1s ease-in-out;
         transform: scale(1);
     }
 
@@ -183,7 +188,6 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-
     }
 
     .card-custom {
@@ -197,7 +201,7 @@
     }
 
     .card-custom:hover {
-        transform: scale(1.05)
+        transform: scale(1.1)
     }
 
     .card-img-custom {
@@ -220,25 +224,17 @@
         margin-left: 10px;
     }
 
-    .card-content-custom h3 {
-        font-size: 20px;
-        font-weight: bold;
-    }
-
-    .card-content-custom p {
-        padding: 15px 0;
-        font-size: 15px;
-    }
-
     .btn-custom {
+        position: absolute;
         padding: 5px;
         border: 2px solid black;
-        transition: all 0.3s ease-in-out;
+        transition: all 0.1s ease-in-out;
         margin: auto;
         margin-top: auto;
         margin-bottom: 10px;
         bottom: 0;
         right: 10px;
+        white-space: nowrap;
     }
 
     .btn-custom:hover {
@@ -253,104 +249,18 @@
 
 }
 
+/* Extra Large Device */
 @media (min-width: 1280px) {
-
-    .filter-list-custom {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        font-size: 20px;
-        font-weight: bold;
-    }
-
-    .filter-list-custom li {
-        padding: 5px;
-        transition: all 0.3s ease-in-out;
-        border-bottom: 2px solid transparent;
-    }
-
-    .filter-list-custom li:hover {
-        color: #018427;
-        transform: scale(1.2);
-        border-bottom: 2px solid #018427;
-    }
-
-    .filter-list-custom li:active {
-        transition: all 0.3s ease-in-out;
-        transform: scale(1);
-    }
-
-    .card-flex-custom {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-
-    }
 
     .card-custom {
         display: flex;
         flex-direction: row;
-        width: 35%;
+        margin: auto;
+        width: 530px;
         height: 250px;
         margin: 20px;
         transition: all 0.3s ease-in-out;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
-    }
-
-    .card-custom:hover {
-        transform: scale(1.05)
-    }
-
-    .card-img-custom {
-        overflow: hidden;
-        width: 250px;
-        height: auto;
-    }
-
-    .card-img-custom img {
-        width: 250px;
-        height: 100%;
-        object-fit: cover;
-    }
-
-    .card-content-custom {
-        width: 280px;
-        height: auto;
-        padding: 10px;
-        margin-top: 25px;
-        margin-left: 10px;
-    }
-
-    .card-content-custom h3 {
-        font-size: 20px;
-        font-weight: bold;
-    }
-
-    .card-content-custom p {
-        padding: 15px 0;
-        font-size: 15px;
-    }
-
-    .btn-custom {
-        padding: 5px;
-        border: 2px solid black;
-        transition: all 0.3s ease-in-out;
-        margin: auto;
-        margin-top: auto;
-        margin-bottom: 10px;
-        bottom: 0;
-        right: 10px;
-    }
-
-    .btn-custom:hover {
-        color: white;
-        border: 2px solid #004f00;
-        background-color: #004f00;
-    }
-
-    .btn-custom:active {
-        transform: scale(0.9);
     }
 
 }
